k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: flask-cicd
  labels:
    name: flask-cicd
