k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-hello-world-cicd-service
  namespace: flask-cicd
  labels:
    app: flask-hello-world-cicd
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 5000
    protocol: TCP
    name: http
  selector:
    app: flask-hello-world-cicd
